# FaceRecognition

./: .env  .gitignore  LICENSE  README.md  README_en.md  README_zh-tw.md  alembic.ini  app_server_cli.py  create_default_db_data.py  docker-compose.yaml  face_detection.py  face_recognition.py  main.py  pyproject.toml  requirements.txt  run_app_server_test.py  run_core_test.py  run_test.py  setting.json
alembic/: README.md  env.py
alembic/versions/: 20250825_1018-31e8ba379790_initial_migration.py  20250826_1048-3843c3eb8bcf_add_max_length_constraints_to_database_.py
app_server/: connection_manager.py  database.py  face_app_manager.py  face_registration_manager.py  models.py  utils.py
app_server/config/: adapter.py  schema.py
app_server/db/: database.py  models.py  schemas.py
app_server/utils/: create_buckets.py  external_service.py  image_tools.py  minio_client.py  preview_camera.py
assets/readme/: README_zh-tw.md
package/: __init__.py  blink_detector.py  calculation.py  config.py  coordinate_detection.py  face_feature_extractor.py  predictor.py  settings.py  video_capturer.py  video_stream.py
scripts/: db_migrate.py
src/: config.py  face_detection.py  logger_config.conf  video_capturer.py
src/func/: __init__.py  calculation.py  reco.py
src/package/: __init__.py  calculation.py  config.py  coordinate_detection.py  (+3 more)
tests/: test_calculation.py  test_coordinate_detection.py  test_predictor.py
tests_app_server/: conftest.py  test_config_api.py  test_face_api.py  test_health_api.py  test_integration.py  test_monkey.py  test_performance.py  test_websocket.py
tests_core/: test_calculation.py  test_predictor.py
(+1 files in other folders)
