[project]
name = "facerecognition"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "dlib==19.22.0",
    "dynaconf==3.2.6",
    "mediapipe==0.10.5",
    "numpy==1.26.4",
    "opencv-python>=4.10",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [".git", ".venv", "logs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
