[project]
name = "facerecognition"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "dlib==19.22.0",
    "dynaconf==3.2.6",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "hypothesis>=6.138.3",
    "loguru>=0.7.3",
    "mediapipe==0.10.5",
    "minio>=7.2.16",
    "numpy==1.26.4",
    "opencv-python>=4.10",
    "psutil>=7.0.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.43",
    "typer>=0.16.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [".git", ".venv", "logs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]